# Snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
entities/: apple.h  snake.h
utils/: collision.cpp  collision.h  moveRect.cpp  moveRect.h
